Last-minute tweaks

--- a/latex/mdx_townhall_aug21.tex
+++ b/latex/mdx_townhall_aug21.tex
@@ -113,6 +113,7 @@
 	\frametitle{CQT vs. STFT spectrograms}
 	\begin{figure}[ht]
 		\centering
+		\vspace{-1em}
 		\subfloat[CQT, 12 bins/octave]{\includegraphics[height=3.3cm]{./images-gspi/glock_cqt12.png}}
 		\subfloat[CQT, 24 bins/octave]{\includegraphics[height=3.3cm]{./images-gspi/glock_cqt24.png}}
 		\subfloat[CQT, 48 bins/octave]{\includegraphics[height=3.3cm]{./images-gspi/glock_cqt48.png}}\\
@@ -120,6 +121,7 @@
 		\subfloat[STFT, window = 256]{\includegraphics[height=3.3cm]{./images-gspi/glock_stft256.png}}
 		\subfloat[STFT, window = 1024]{\includegraphics[height=3.3cm]{./images-gspi/glock_stft1024.png}}
 		\subfloat[STFT, window = 4096]{\includegraphics[height=3.3cm]{./images-gspi/glock_stft4096.png}}
+		\vspace{-0.5em}
 	\end{figure}
 \end{frame}
 
