Polish up MDX presentation

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -176,7 +176,7 @@ year = {2011},
 pages = {1481-1496},
 title = {Theory, implementation and applications of nonstationary Gabor frames},
 volume = {236},
-journal = {Journal of computational and applied mathematics},
+journal = {Journal of Computational and Applied Mathematics},
 doi = {10.1016/j.cam.2011.09.011},
 url = {https://ltfat.github.io/notes/ltfatnote018.pdf}
 }
